--- a/css/main.css
+++ b/css/main.css
@@ -3,11 +3,20 @@ html {
 }
 
 .masthead {
-
+  background-image: url("../images/leaf-bg.svg");
+  background-repeat: repeat, repeat-x, repeat-y, round;
+  background-size: 64px;
+  background-color: #588477;
+  border-style: solid;
+  border-top-color: #2d5a4d;
+  border-bottom-color: #2d5a4d;
+  border-width: 3px;
+  background-position: 65px;
 }
 
 .logo {
   text-align: center;
+  color: #fff;
 }
 
 .nav {
@@ -16,14 +25,28 @@ html {
 
 .nav a {
   text-decoration: none;
+  color: #fff;
+  background-color: #467366;
+  border-style: solid;
+  border-width: 3px;
+  border-color: #2d5a4d;
+  border-radius: 8px;
 }
 
 .nav a:hover {
+  background-color: #fff;
+  background-image: url("../images/leaf-icon.svg");
+  background-repeat: no-repeat;
+  background-position: .75em;
+  background-size: 64px;
+  color: #145b1d;
 
 }
 
 .banner {
-
+  background-image: url("../images/banner.jpg");
+  background-size: 2500px;
+  background-repeat: no-repeat;
 }
 
 .banner-content {
