--- a/css/main.css
+++ b/css/main.css
@@ -4,14 +4,13 @@ html {
 
 .masthead {
   background-image: url("../images/leaf-bg.svg");
-  background-repeat: repeat, repeat-x, repeat-y, round;
+  background-repeat: repeat;
   background-size: 64px;
   background-color: #588477;
   border-style: solid;
   border-top-color: #2d5a4d;
   border-bottom-color: #2d5a4d;
   border-width: 3px;
-  background-position: 65px;
 }
 
 .logo {
@@ -44,13 +43,19 @@ html {
 }
 
 .banner {
-  background-image: url("../images/banner.jpg");
-  background-size: 2500px;
+  background-image: linear-gradient(to bottom, rgba(16, 52, 41, 0), rgba(16, 52, 41, 8)), url("../images/banner.jpg");
+  background-position: left bottom, center bottom;
+  background-size: 100% 50%, cover;
   background-repeat: no-repeat;
 }
 
 .banner-content {
-
+  background-image: url("../images/two-leaves.svg");
+  padding-top: 300px;
+  background-size: 100px;
+  background-position: .75em 180px;
+  background-repeat: no-repeat;
+  color: white;
 }
 
 @media only screen and (min-width: 60em) {
