--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ html {
 }
 
 .banner {
-  background-image: linear-gradient(to bottom, rgba(16, 52, 41, 0), rgba(16, 52, 41, 8)), url("../images/banner.jpg");
+  background-image: linear-gradient(to bottom, rgba(16, 52, 41, 0), rgba(16, 52, 41, .8)), url("../images/banner.jpg");
   background-position: left bottom, center bottom;
   background-size: 100% 50%, cover;
   background-repeat: no-repeat;
